--- a/www/fav.html
+++ b/www/fav.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>My Page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/jquery.mobile-1.2.0.min.css" />
     <script src="lib/jquery-1.8.3.min.js"></script>
