--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,8 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
+            
+            <a href="msg.html">main</a>
         </div>
         <script type="text/javascript" src="cordova-2.2.0.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
