--- a/www/msg.html
+++ b/www/msg.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>My Page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/jquery.mobile-1.2.0.min.css" />
     <script src="lib/jquery-1.8.3.min.js"></script>
@@ -16,6 +17,20 @@
     </div>
 
     <div data-role="content">
+        <ul data-role="listview" data-inset="true" data-filter="true">
+            <li><a href="#">Acura</a></li>
+            <li><a href="#">Audi</a></li>
+            <li><a href="#">BMW</a></li>
+            <li><a href="#">Cadillac</a></li>
+            <li><a href="#">Ferrari</a></li>
+        </ul>
+        <ul data-role="listview" data-inset="true" data-filter="true">
+            <li><a href="#">Acura</a></li>
+            <li><a href="#">Audi</a></li>
+            <li><a href="#">BMW</a></li>
+            <li><a href="#">Cadillac</a></li>
+            <li><a href="#">Ferrari</a></li>
+        </ul>
         <ul data-role="listview" data-inset="true" data-filter="true">
             <li><a href="#">Acura</a></li>
             <li><a href="#">Audi</a></li>
