--- a/www/fav.html
+++ b/www/fav.html
@@ -15,8 +15,8 @@
 
     <div data-role="header">
         <div data-role="controlgroup" data-type="horizontal">
-            　<a href="index.html" data-role="button">店铺</a>
-            　<a href="index.html" data-role="button">宝贝</a>
+            　<a href="#shop" data-role="button">店铺</a>
+            　<a href="#goods" data-role="button">宝贝</a>
         </div>
     </div>
 
@@ -69,8 +69,8 @@
         
         <div data-role="header">
             <div data-role="controlgroup" data-type="horizontal">
-                　<a href="index.html" data-role="button">店铺</a>
-                　<a href="index.html" data-role="button">宝贝</a>
+                　<a href="#shop" data-role="button">店铺</a>
+                　<a href="#goods" data-role="button">宝贝</a>
             </div>
         </div>
         
