--- a/www/fav.html
+++ b/www/fav.html
@@ -5,14 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/jquery.mobile-1.2.0.min.css" />
-    <link rel="stylesheet" href="css/fav.css" />
+    
     <script src="lib/jquery-1.8.3.min.js"></script>
     <script src="lib/jquery.mobile-1.2.0.min.js"></script>
 </head>
 <body>
- 
-<div data-role="page" id="shop">
 
+<div data-role="page" id="shop">
+<link rel="stylesheet" type="text/css" href="css/fav.css" />
     <div data-role="header">
         <div data-role="controlgroup" data-type="horizontal">
             　<a href="#shop" data-role="button">店铺</a>
@@ -23,7 +23,7 @@
     <div data-role="content">
         <ul class="shop-list-ul">
             <li class="shop-list-li clearfix">
-                <div class="shop-logo"><img src="img/avartar.jpg" /></div>
+                <div class="shop-logo"><img src="img/avartar.jpg" width=64 height=64 /></div>
                 <div class="shop-info">
                     <p>
                         <a class="shop-name-link" href="">这里是宝贝的名称</a>
@@ -39,6 +39,48 @@
                     <p>
                         <span>最近更新：</span>
                         <span>2012-12-25</span>
+                    </p>
+                </div>
+                <div style="clear:both"></div>
+            </li>
+            <li class="shop-list-li clearfix">
+                <div class="shop-logo"><img src="img/avartar.jpg" width=64 height=64 /></div>
+                <div class="shop-info">
+                    <p>
+                    <a class="shop-name-link" href="">这里是宝贝的名称</a>
+                    </p>
+                    <p>
+                    <span>好评率：</span>
+                    <span>90%</span>
+                    </p>
+                    <p>
+                    <span>宝贝数：</span>
+                    <span>100</span>
+                    </p>
+                    <p>
+                    <span>最近更新：</span>
+                    <span>2012-12-25</span>
+                    </p>
+                </div>
+                <div style="clear:both"></div>
+            </li>
+            <li class="shop-list-li clearfix">
+                <div class="shop-logo"><img src="img/avartar.jpg" width=64 height=64 /></div>
+                <div class="shop-info">
+                    <p>
+                    <a class="shop-name-link" href="">这里是宝贝的名称</a>
+                    </p>
+                    <p>
+                    <span>好评率：</span>
+                    <span>90%</span>
+                    </p>
+                    <p>
+                    <span>宝贝数：</span>
+                    <span>100</span>
+                    </p>
+                    <p>
+                    <span>最近更新：</span>
+                    <span>2012-12-25</span>
                     </p>
                 </div>
                 <div style="clear:both"></div>
